--- a/src/pages/layouts/AppLayout/ui/AppLayout.module.scss
+++ b/src/pages/layouts/AppLayout/ui/AppLayout.module.scss
@@ -1,4 +1,21 @@
-.AppLayout {
-  width: 100%;
+.Header {
+  display: flex;
   height: var(--navbar-height);
+  align-items: center;
+}
+
+.Content {
+  display: flex;
+  height: calc(100% - var(--navbar-height));
+  flex-direction: column;
+}
+
+.PageWrapper {
+  flex-grow: 1;
+  padding: 1em;
+}
+
+.Navbar {
+  width: 100%;
+  height: 100%;
 }
