--- a/src/widgets/Navbar/ui/Navbar.module.scss
+++ b/src/widgets/Navbar/ui/Navbar.module.scss
@@ -2,4 +2,13 @@
   display: flex;
   align-items: center;
   padding: 0.5em;
+  gap: 1rem;
+}
+
+.FeaturesContainer {
+  display: flex;
+  flex-grow: 1;
+  justify-content: end;
+  margin-left: auto;
+  gap: 1rem;
 }
